[package]
name = "rocket-errors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", optional = true }
eyre = { version = "0.6", optional = true }
rocket = "0.5"

[dev-dependencies]
thiserror = "1"

[features]
default = ["anyhow"]
anyhow = ["dep:anyhow"]
eyre = ["dep:eyre"]

[[example]]
name = "anyhow-rocket"
path = "examples/anyhow_rocket.rs"

[[example]]
name = "eyre-rocket"
path = "examples/eyre_rocket.rs"

[[example]]
name = "handling"
path = "examples/handling.rs"
