[package]
name = "rocket-errors"
authors = ["yuk1ty <yuki.multiplus@gmail.com>"]
description = "A library for handling errors with anyhow and eyre in Rocket applications."
readme = "README.md"
repository = "https://github.com/yuk1ty/rocket-errors"
license = "MIT"
version = "0.1.0"
edition = "2021"
keywords = ["rocket", "error-handling"]
categories = ["web-programming::http-server", "web-programming::rocket"]

[dependencies]
anyhow = { version = "1", optional = true }
eyre = { version = "0.6", optional = true }
rocket = "0.5"

[dev-dependencies]
thiserror = "1"

[features]
default = ["anyhow"]
anyhow = ["dep:anyhow"]
eyre = ["dep:eyre"]

[[example]]
name = "anyhow-rocket"
path = "examples/anyhow_rocket.rs"

[[example]]
name = "eyre-rocket"
path = "examples/eyre_rocket.rs"

[[example]]
name = "handling"
path = "examples/handling.rs"
